--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     ],
     "website": "https://github.com/DalinMathew/AutoFilterBotV3",
     "repository": "https://github.com/DalinMathew/AutoFilterBotV3",
-    "env": {
+    "env": {https://github.com/DalinMathew/AutoFilterBotV3
         "BOT_TOKEN": {
             "description": "Your bot token.",
             "value": ""
