--- a/app.json
+++ b/app.json
@@ -16,8 +16,8 @@
       "inline"
     ],
     "website": "https://github.com/DalinMathew/AutoFilterBotV3",
-    "repository": "DalinMathew/AutoFilterBotV3",
-    "env": {https://github.com/DalinMathew/AutoFilterBotV3
+    "repository": "https://github.com/Abhiinavaji/AutoFilterBotV3",
+    "env": {https://github.com/Abhiinavaji/AutoFilterBotV3
         "BOT_TOKEN": {
             "description": "Your bot token.",
             "value": ""
